2009-01-08 Jesse Kornblum <md5deep@jessekornblum.com>

	* Added detection and avoidance of NTFS Junction Points
	  to avoid infinite loops on Windows systems. 
	  See bug report 2492520 for more details.
	

2008-10-22 Jesse Kornblum <md5deep@jessekornblum.com>
	
	* Rewrote the parsing of known files in hashdeep in response 
	  to bug 2184219
	  relating to filenames with commas in them. We now determine
	  the expected number of columns from the header and use that
	  to parse the remainder of the file.
	  This should eventually allow us to remove our dependency on
	  strsep.

	* Fixed a minor hashdeep bug where hashes were considered
	  invalid if they contained too few characters, but not too many.

2008-09-25 Jesse Kornblum <md5deep@jessekornblum.com>

	* Updated hashdeep usage message to reflect that MD5 and SHA-256
	  are the default algorithms used, not SHA-1.
	

2008-09-23 Jesse Kornblum <md5deep@jessekornblum.com>

	* Changing stat functions on Windows to handle 64-bit
	  file sizes (i.e. call _tstat64 instead of _tstat)

	
2008-09-14 Jesse Kornblum <md5deep@jessekornblum.com>

	* Experimenting with new time estimation calculation
	

2008-08-13 Jesse Kornblum <md5deep@jessekornblum.com>

	* Updated contact email address to research@jessekornblum.com.
	  Reconfigured.

	* Applied patch 2026326 to fix VPATH build for manpages.

	
2008-07-27 Jesse Kornblum <md5deep@jessekornblum.com>

	* Reconfigured with latest tools

	
2008-07-20 Jesse Kornblum <md5deep@jessekornblum.com>

	* Removed debugging code accidently left in files.c:
	  find_rigid_hash function.

2008-07-18 Jesse Kornblum <md5deep@jessekornblum.com>

	* Updated documentation to reflect Cygwin Ports support.

	* Modified file_type function to record the file size of 
	  each file processed. This should eliminate the need to
	  call stat again or the ioctl functions in hash.c and
	  hopefully speed up the program.

	* Added timestamp to the output for size mode per Feature